# BluetoothStack

./: .gitignore  README.md
android/: README.md
common/: log.h  packet.h  socket.h
esp32/: README.md
linux/: CMakeLists.txt  README.md
linux/client/: bluetooth_classic_client.cpp  bluetooth_classic_client.h
linux/server/: bluetooth_classic_server.cpp  bluetooth_classic_server.h
scripts/: clang_format.py
